--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+min-height: 100vh;
   font-size: 1.25rem; /* Augmentez la taille de police globale */
 }
 
@@ -211,7 +218,7 @@ button:focus-visible,
 }
 
 .section-accueil .container {
-  display: flex;
+
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
